--- a/ansible/roles/tomcat_deploy/tasks/main.yml
+++ b/ansible/roles/tomcat_deploy/tasks/main.yml
@@ -20,7 +20,7 @@
     - restart tomcat
 
 - name: download from maven repo
-  get_url: url={{ war_url }} dest="{{ tomcat_deploy_dir }}/{{ war_filename }}.war" force=true
+  get_url: url={{ war_url }} dest="{{ tomcat_deploy_dir }}/{{ war_filename }}.war" force=no  
   notify:
     - restart tomcat
   register: getwar
