--- a/ansible/roles/crbio/handlers/main.yml
+++ b/ansible/roles/crbio/handlers/main.yml
@@ -1,2 +1,5 @@
 - name: restart tomcat
   service: name={{tomcat}} state=restarted
+
+- name: reload apache2
+  service: name=apache2 state=reloaded
